Card img width changed to prevent horizontal scrolling

--- a/public/style.css
+++ b/public/style.css
@@ -518,7 +518,8 @@ button.small {
 }
 
 .contact-card img {
-  width: 350px;
+  width: 100%;
+  max-width: 350px;
 }
 
 .icon-wrap {
